<resources>
    <string name="tip_calculator">Tip Calculator</string>
    <string name="fill_in_the_fields_below_to_calculate_your_bill">Fill in the fields below to calculate your bill</string>
    <string name="fill_in_all_fields">Fill in all fields</string>
    <string name="type_here_the_total_amount_of_the_bill">Type here the total amount of the bill</string>
    <string name="e_g_250_eur">E.g.: 250 EUR</string>
    <string name="type_here_the_number_of_people">Type here the number of people</string>
    <string name="eg_4">E.g.: 4</string>
    <string name="desired_amount_of_percentage">Desired amount of percentage</string>
    <string name="e_g_10">E.g.: 10%</string>
    <string name="clean">Clean</string>
    <string name="calculate">Calculate</string>
    <string name="summary">Summary</string>
    <string name="see_below_the_summary_of_your_check">See below the summary of your check</string>
    <string name="total_amount">Total amount</string>
    <string name="number_of_people">Number of people</string>
    <string name="percentage">Percentage</string>
    <string name="total">Total</string>
    <string name="refresh">Refresh</string>
</resources>