<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title"
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/tip_calculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/fill_in_the_fields_below_to_calculate_your_bill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_hint_total_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/type_here_the_total_amount_of_the_bill"
        app:layout_constraintStart_toStartOf="@+id/tv_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/tv_subtitle"
        app:layout_constraintStart_toStartOf="@id/tv_hint_total_amount"
        app:layout_constraintTop_toBottomOf="@+id/tv_hint_total_amount">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_total"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/e_g_250_eur"
            android:paddingStart="0dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_hint_number_of_people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/type_here_the_number_of_people"
        app:layout_constraintStart_toStartOf="@id/til_total"
        app:layout_constraintTop_toBottomOf="@+id/til_total" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_number_of_people"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/tv_subtitle"
        app:layout_constraintStart_toStartOf="@+id/tv_hint_number_of_people"
        app:layout_constraintTop_toBottomOf="@+id/tv_hint_number_of_people">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_number_of_people"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/eg_4"
            android:maxLength="2"
            android:inputType="number"
            android:paddingStart="0dp"
            android:textSize="24sp"
            android:textStyle="bold"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_hint_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/desired_amount_of_percentage"
        app:layout_constraintStart_toStartOf="@+id/til_number_of_people"
        app:layout_constraintTop_toBottomOf="@+id/til_number_of_people" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_percentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/tv_subtitle"
        app:layout_constraintStart_toStartOf="@+id/tv_hint_percentage"
        app:layout_constraintTop_toBottomOf="@+id/tv_hint_percentage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_percentage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/e_g_10"
            android:maxLength="2"
            android:inputType="number"
            android:paddingStart="0dp"
            android:textSize="24sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_clean"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="16dp"
        android:text="@string/clean"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
        app:layout_constraintStart_toStartOf="parent"/>
    
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/vertical_guideline"/>

</androidx.constraintlayout.widget.ConstraintLayout>